tried fixing safari add to home function

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,7 +1,8 @@
 {
     "name": "fairshare",
     "short_name": "fairshare",
-    "start_url": ".",
+    "start_url": "/FairShare/",
+    "scope": "/FairShare/",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
